# cuboids-cpp

./: CMakeLists.txt
src/: constants.cpp  constants.hpp  geometry.cpp  geometry.hpp  main.cpp  vectors.cpp  vectors.hpp
src/display/: renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  window.cpp  window.hpp
src/figures/: aster.cpp  aster.hpp  proj.cpp  proj.hpp  ship.cpp  ship.hpp
